--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "vercel-build": "npm install"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
