--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,12 +1,15 @@
 {
     "version":2,
-    "builds": [
-      { "src": "*.js", "use": "@vercel/node" }
-    ],
-    "routes": [
+    "builds":[
         {
-          "src": "/(.*)",
-          "dest": "/"
+            "src":"*.js",
+            "use":"@vercel/node"
+        }
+    ],
+    "routes":[
+        {
+            "src":"/(.*)",
+            "dest":"/"
         }
     ]
-  }
+}
